--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -11,214 +11,69 @@ version = '0.0.0'
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
 
-[build-dependencies.substrate-wasm-builder]
-branch = 'master'
-git = 'https://github.com/paritytech/substrate'
+[dependencies]
+codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
+scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
+serde = { version = "1.0.101", default-features = false, features = ["derive"], optional = true }
 
-[dependencies.codec]
-default-features = false
-features = ['derive']
-package = 'parity-scale-codec'
-version = '3.0.0'
+fp-self-contained = { git = 'https://github.com/paritytech/frontier.git', default-features = false }
+fp-rpc = { git = 'https://github.com/paritytech/frontier.git', default-features = false }
+fp-evm = { git = 'https://github.com/paritytech/frontier.git', default-features = false }
 
-[dependencies.fp-rpc]
-default-features = false
-git = 'https://github.com/paritytech/frontier.git'
+pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+pallet-base-fee = { default-features = false, git = "https://github.com/paritytech/frontier.git" }
+pallet-dynamic-fee = { default-features = false, git = "https://github.com/paritytech/frontier.git" }
+pallet-ethereum = { default-features = false, git = "https://github.com/paritytech/frontier.git" }
+pallet-evm = { default-features = false, git = "https://github.com/paritytech/frontier.git" }
+pallet-evm-precompile-modexp = { default-features = false, git = "https://github.com/paritytech/frontier.git" }
+pallet-evm-precompile-sha3fips = { default-features = false, git = "https://github.com/paritytech/frontier.git" }
+pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/paritytech/frontier.git" }
+pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
-[dependencies.fp-self-contained]
-default-features = false
-git = 'https://github.com/paritytech/frontier.git'
+sp-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-session = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-std = { version = '4.0.0', default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-version = { version = '5.0.0', default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
-[dependencies.frame-benchmarking]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-optional = true
+frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
-[dependencies.frame-executive]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
+# # Used fo runtime benchmarking
+frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", optional = true }
+frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", optional = true }
 
-[dependencies.frame-support]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
+[build-dependencies]
+substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
 
-[dependencies.frame-system]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.frame-system-benchmarking]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-optional = true
-
-[dependencies.frame-system-rpc-runtime-api]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.pallet-aura]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.pallet-balances]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.pallet-base-fee]
-default-features = false
-git = 'https://github.com/paritytech/frontier.git'
-
-[dependencies.pallet-dynamic-fee]
-default-features = false
-git = 'https://github.com/paritytech/frontier.git'
-
-[dependencies.pallet-ethereum]
-default-features = false
-git = 'https://github.com/paritytech/frontier.git'
-
-[dependencies.pallet-evm]
-default-features = false
-git = 'https://github.com/paritytech/frontier.git'
-
-[dependencies.pallet-evm-precompile-modexp]
-default-features = false
-git = 'https://github.com/paritytech/frontier.git'
-
-[dependencies.pallet-evm-precompile-sha3fips]
-default-features = false
-git = 'https://github.com/paritytech/frontier.git'
-
-[dependencies.pallet-evm-precompile-simple]
-default-features = false
-git = 'https://github.com/paritytech/frontier.git'
-
-[dependencies.pallet-grandpa]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.pallet-randomness-collective-flip]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.pallet-sudo]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.pallet-timestamp]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.pallet-transaction-payment]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.pallet-transaction-payment-rpc-runtime-api]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.scale-info]
-default-features = false
-features = ['derive']
-version = '2.0.0'
-
-[dependencies.serde]
-features = ['derive']
-optional = true
-version = '1.0.101'
-
-[dependencies.sp-api]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.sp-block-builder]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.sp-consensus-aura]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.sp-core]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.sp-inherents]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.sp-io]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.sp-offchain]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.sp-runtime]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.sp-session]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.sp-std]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-version = '4.0.0'
-
-[dependencies.sp-transaction-pool]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-
-[dependencies.sp-version]
-branch = 'master'
-default-features = false
-git = 'https://github.com/paritytech/substrate'
-version = '5.0.0'
 
 [features]
 aura = []
+manual-seal = []
 default = [
     'std',
     'aura',
-]
-manual-seal = []
-runtime-benchmarks = [
-    'frame-benchmarking',
-    'frame-system-benchmarking',
-    'frame-system/runtime-benchmarks',
-    'pallet-ethereum/runtime-benchmarks',
-    'pallet-evm/runtime-benchmarks',
 ]
 std = [
     'serde',
     'codec/std',
     'scale-info/std',
+
     'sp-api/std',
     'sp-block-builder/std',
     'sp-consensus-aura/std',
@@ -231,6 +86,7 @@ std = [
     'sp-std/std',
     'sp-transaction-pool/std',
     'sp-version/std',
+
     'frame-executive/std',
     'frame-support/std',
     'frame-system-rpc-runtime-api/std',
@@ -243,12 +99,21 @@ std = [
     'pallet-timestamp/std',
     'pallet-transaction-payment-rpc-runtime-api/std',
     'pallet-transaction-payment/std',
+
     'fp-rpc/std',
     'fp-self-contained/std',
+
     'pallet-base-fee/std',
     'pallet-dynamic-fee/std',
     'pallet-ethereum/std',
     'pallet-evm/std',
     'pallet-evm-precompile-simple/std',
     'pallet-evm-precompile-sha3fips/std',
+]
+runtime-benchmarks = [
+    'frame-benchmarking',
+    'frame-system-benchmarking',
+    'frame-system/runtime-benchmarks',
+    'pallet-ethereum/runtime-benchmarks',
+    'pallet-evm/runtime-benchmarks',
 ]
